LatexParser.py
# Generated from LatexParser.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class LatexParser ( Parser ):

    grammarFileName = "LatexParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'\\begin{document}'", "'\\end{document}'", 
                     "<INVALID>", "'\\\\'", "<INVALID>", "'}'", "'\\textbf{'", 
                     "'\\textit{'", "'\\section{'", "'\\subsection{'", "'\\subsubsection{'", 
                     "'\\begin{enumerate}'", "'\\end{enumerate}'", "'\\begin{itemize}'", 
                     "'\\end{itemize}'", "'\\item'", "'\\begin{verbatim}'", 
                     "'\\end{verbatim}'", "<INVALID>", "<INVALID>", "'&'", 
                     "'\\hline'" ]

    symbolicNames = [ "<INVALID>", "DOCUMENT_START", "DOCUMENT_END", "TEXT", 
                      "LINE_END", "WHITESPACE", "COMMAND_CLOSE", "BOLD_OPEN", 
                      "ITALICS_OPEN", "HEADER1", "HEADER2", "HEADER3", "ENUM_START", 
                      "ENUM_END", "LIST_START", "LIST_END", "ITEM", "CODE_START", 
                      "CODE_END", "TABLE_START", "TABLE_ALIGN", "CELL_SEPARATOR", 
                      "HLINE", "TABLE_END" ]

    RULE_latexDocument = 0
    RULE_documentContent = 1
    RULE_text = 2
    RULE_latexElement = 3
    RULE_elementContent = 4
    RULE_latexNestedElement = 5
    RULE_bold = 6
    RULE_italics = 7
    RULE_header1 = 8
    RULE_header2 = 9
    RULE_header3 = 10
    RULE_numbered_list = 11
    RULE_itemize = 12
    RULE_item = 13
    RULE_code = 14
    RULE_table = 15

    ruleNames =  [ "latexDocument", "documentContent", "text", "latexElement", 
                   "elementContent", "latexNestedElement", "bold", "italics", 
                   "header1", "header2", "header3", "numbered_list", "itemize", 
                   "item", "code", "table" ]

    EOF = Token.EOF
    DOCUMENT_START=1
    DOCUMENT_END=2
    TEXT=3
    LINE_END=4
    WHITESPACE=5
    COMMAND_CLOSE=6
    BOLD_OPEN=7
    ITALICS_OPEN=8
    HEADER1=9
    HEADER2=10
    HEADER3=11
    ENUM_START=12
    ENUM_END=13
    LIST_START=14
    LIST_END=15
    ITEM=16
    CODE_START=17
    CODE_END=18
    TABLE_START=19
    TABLE_ALIGN=20
    CELL_SEPARATOR=21
    HLINE=22
    TABLE_END=23

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class LatexDocumentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DOCUMENT_START(self):
            return self.getToken(LatexParser.DOCUMENT_START, 0)

        def documentContent(self):
            return self.getTypedRuleContext(LatexParser.DocumentContentContext,0)


        def DOCUMENT_END(self):
            return self.getToken(LatexParser.DOCUMENT_END, 0)

        def getRuleIndex(self):
            return LatexParser.RULE_latexDocument

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLatexDocument" ):
                listener.enterLatexDocument(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLatexDocument" ):
                listener.exitLatexDocument(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLatexDocument" ):
                return visitor.visitLatexDocument(self)
            else:
                return visitor.visitChildren(self)




    def latexDocument(self):

        localctx = LatexParser.LatexDocumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_latexDocument)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.match(LatexParser.DOCUMENT_START)
            self.state = 33
            self.documentContent()
            self.state = 34
            self.match(LatexParser.DOCUMENT_END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DocumentContentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def text(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatexParser.TextContext)
            else:
                return self.getTypedRuleContext(LatexParser.TextContext,i)


        def latexElement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatexParser.LatexElementContext)
            else:
                return self.getTypedRuleContext(LatexParser.LatexElementContext,i)


        def getRuleIndex(self):
            return LatexParser.RULE_documentContent

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDocumentContent" ):
                listener.enterDocumentContent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDocumentContent" ):
                listener.exitDocumentContent(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDocumentContent" ):
                return visitor.visitDocumentContent(self)
            else:
                return visitor.visitChildren(self)




    def documentContent(self):

        localctx = LatexParser.DocumentContentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_documentContent)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LatexParser.TEXT) | (1 << LatexParser.LINE_END) | (1 << LatexParser.WHITESPACE))) != 0):
                self.state = 36
                self.text()
                self.state = 41
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LatexParser.BOLD_OPEN) | (1 << LatexParser.ITALICS_OPEN) | (1 << LatexParser.HEADER1) | (1 << LatexParser.HEADER2) | (1 << LatexParser.HEADER3) | (1 << LatexParser.ENUM_START) | (1 << LatexParser.LIST_START) | (1 << LatexParser.CODE_START) | (1 << LatexParser.TABLE_START))) != 0):
                self.state = 42
                self.latexElement()
                self.state = 46
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LatexParser.TEXT) | (1 << LatexParser.LINE_END) | (1 << LatexParser.WHITESPACE))) != 0):
                    self.state = 43
                    self.text()
                    self.state = 48
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TextContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TEXT(self):
            return self.getToken(LatexParser.TEXT, 0)

        def WHITESPACE(self):
            return self.getToken(LatexParser.WHITESPACE, 0)

        def LINE_END(self):
            return self.getToken(LatexParser.LINE_END, 0)

        def getRuleIndex(self):
            return LatexParser.RULE_text

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterText" ):
                listener.enterText(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitText" ):
                listener.exitText(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitText" ):
                return visitor.visitText(self)
            else:
                return visitor.visitChildren(self)




    def text(self):

        localctx = LatexParser.TextContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_text)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LatexParser.TEXT) | (1 << LatexParser.LINE_END) | (1 << LatexParser.WHITESPACE))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LatexElementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bold(self):
            return self.getTypedRuleContext(LatexParser.BoldContext,0)


        def italics(self):
            return self.getTypedRuleContext(LatexParser.ItalicsContext,0)


        def header1(self):
            return self.getTypedRuleContext(LatexParser.Header1Context,0)


        def header2(self):
            return self.getTypedRuleContext(LatexParser.Header2Context,0)


        def header3(self):
            return self.getTypedRuleContext(LatexParser.Header3Context,0)


        def numbered_list(self):
            return self.getTypedRuleContext(LatexParser.Numbered_listContext,0)


        def itemize(self):
            return self.getTypedRuleContext(LatexParser.ItemizeContext,0)


        def code(self):
            return self.getTypedRuleContext(LatexParser.CodeContext,0)


        def table(self):
            return self.getTypedRuleContext(LatexParser.TableContext,0)


        def getRuleIndex(self):
            return LatexParser.RULE_latexElement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLatexElement" ):
                listener.enterLatexElement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLatexElement" ):
                listener.exitLatexElement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLatexElement" ):
                return visitor.visitLatexElement(self)
            else:
                return visitor.visitChildren(self)




    def latexElement(self):

        localctx = LatexParser.LatexElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_latexElement)
        try:
            self.state = 65
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LatexParser.BOLD_OPEN]:
                self.enterOuterAlt(localctx, 1)
                self.state = 56
                self.bold()
                pass
            elif token in [LatexParser.ITALICS_OPEN]:
                self.enterOuterAlt(localctx, 2)
                self.state = 57
                self.italics()
                pass
            elif token in [LatexParser.HEADER1]:
                self.enterOuterAlt(localctx, 3)
                self.state = 58
                self.header1()
                pass
            elif token in [LatexParser.HEADER2]:
                self.enterOuterAlt(localctx, 4)
                self.state = 59
                self.header2()
                pass
            elif token in [LatexParser.HEADER3]:
                self.enterOuterAlt(localctx, 5)
                self.state = 60
                self.header3()
                pass
            elif token in [LatexParser.ENUM_START]:
                self.enterOuterAlt(localctx, 6)
                self.state = 61
                self.numbered_list()
                pass
            elif token in [LatexParser.LIST_START]:
                self.enterOuterAlt(localctx, 7)
                self.state = 62
                self.itemize()
                pass
            elif token in [LatexParser.CODE_START]:
                self.enterOuterAlt(localctx, 8)
                self.state = 63
                self.code()
                pass
            elif token in [LatexParser.TABLE_START]:
                self.enterOuterAlt(localctx, 9)
                self.state = 64
                self.table()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElementContentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def text(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatexParser.TextContext)
            else:
                return self.getTypedRuleContext(LatexParser.TextContext,i)


        def latexNestedElement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatexParser.LatexNestedElementContext)
            else:
                return self.getTypedRuleContext(LatexParser.LatexNestedElementContext,i)


        def getRuleIndex(self):
            return LatexParser.RULE_elementContent

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElementContent" ):
                listener.enterElementContent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElementContent" ):
                listener.exitElementContent(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElementContent" ):
                return visitor.visitElementContent(self)
            else:
                return visitor.visitChildren(self)




    def elementContent(self):

        localctx = LatexParser.ElementContentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_elementContent)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LatexParser.TEXT) | (1 << LatexParser.LINE_END) | (1 << LatexParser.WHITESPACE))) != 0):
                self.state = 67
                self.text()
                self.state = 72
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 82
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LatexParser.BOLD_OPEN) | (1 << LatexParser.ITALICS_OPEN) | (1 << LatexParser.ENUM_START) | (1 << LatexParser.LIST_START) | (1 << LatexParser.CODE_START))) != 0):
                self.state = 73
                self.latexNestedElement()
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LatexParser.TEXT) | (1 << LatexParser.LINE_END) | (1 << LatexParser.WHITESPACE))) != 0):
                    self.state = 74
                    self.text()
                    self.state = 79
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 84
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LatexNestedElementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bold(self):
            return self.getTypedRuleContext(LatexParser.BoldContext,0)


        def italics(self):
            return self.getTypedRuleContext(LatexParser.ItalicsContext,0)


        def numbered_list(self):
            return self.getTypedRuleContext(LatexParser.Numbered_listContext,0)


        def itemize(self):
            return self.getTypedRuleContext(LatexParser.ItemizeContext,0)


        def code(self):
            return self.getTypedRuleContext(LatexParser.CodeContext,0)


        def getRuleIndex(self):
            return LatexParser.RULE_latexNestedElement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLatexNestedElement" ):
                listener.enterLatexNestedElement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLatexNestedElement" ):
                listener.exitLatexNestedElement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLatexNestedElement" ):
                return visitor.visitLatexNestedElement(self)
            else:
                return visitor.visitChildren(self)




    def latexNestedElement(self):

        localctx = LatexParser.LatexNestedElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_latexNestedElement)
        try:
            self.state = 90
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LatexParser.BOLD_OPEN]:
                self.enterOuterAlt(localctx, 1)
                self.state = 85
                self.bold()
                pass
            elif token in [LatexParser.ITALICS_OPEN]:
                self.enterOuterAlt(localctx, 2)
                self.state = 86
                self.italics()
                pass
            elif token in [LatexParser.ENUM_START]:
                self.enterOuterAlt(localctx, 3)
                self.state = 87
                self.numbered_list()
                pass
            elif token in [LatexParser.LIST_START]:
                self.enterOuterAlt(localctx, 4)
                self.state = 88
                self.itemize()
                pass
            elif token in [LatexParser.CODE_START]:
                self.enterOuterAlt(localctx, 5)
                self.state = 89
                self.code()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BoldContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOLD_OPEN(self):
            return self.getToken(LatexParser.BOLD_OPEN, 0)

        def elementContent(self):
            return self.getTypedRuleContext(LatexParser.ElementContentContext,0)


        def COMMAND_CLOSE(self):
            return self.getToken(LatexParser.COMMAND_CLOSE, 0)

        def getRuleIndex(self):
            return LatexParser.RULE_bold

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBold" ):
                listener.enterBold(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBold" ):
                listener.exitBold(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBold" ):
                return visitor.visitBold(self)
            else:
                return visitor.visitChildren(self)




    def bold(self):

        localctx = LatexParser.BoldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_bold)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(LatexParser.BOLD_OPEN)
            self.state = 93
            self.elementContent()
            self.state = 94
            self.match(LatexParser.COMMAND_CLOSE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ItalicsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ITALICS_OPEN(self):
            return self.getToken(LatexParser.ITALICS_OPEN, 0)

        def elementContent(self):
            return self.getTypedRuleContext(LatexParser.ElementContentContext,0)


        def COMMAND_CLOSE(self):
            return self.getToken(LatexParser.COMMAND_CLOSE, 0)

        def getRuleIndex(self):
            return LatexParser.RULE_italics

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterItalics" ):
                listener.enterItalics(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitItalics" ):
                listener.exitItalics(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitItalics" ):
                return visitor.visitItalics(self)
            else:
                return visitor.visitChildren(self)




    def italics(self):

        localctx = LatexParser.ItalicsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_italics)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(LatexParser.ITALICS_OPEN)
            self.state = 97
            self.elementContent()
            self.state = 98
            self.match(LatexParser.COMMAND_CLOSE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Header1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def HEADER1(self):
            return self.getToken(LatexParser.HEADER1, 0)

        def text(self):
            return self.getTypedRuleContext(LatexParser.TextContext,0)


        def COMMAND_CLOSE(self):
            return self.getToken(LatexParser.COMMAND_CLOSE, 0)

        def getRuleIndex(self):
            return LatexParser.RULE_header1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHeader1" ):
                listener.enterHeader1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHeader1" ):
                listener.exitHeader1(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHeader1" ):
                return visitor.visitHeader1(self)
            else:
                return visitor.visitChildren(self)




    def header1(self):

        localctx = LatexParser.Header1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_header1)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(LatexParser.HEADER1)
            self.state = 101
            self.text()
            self.state = 102
            self.match(LatexParser.COMMAND_CLOSE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Header2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def HEADER2(self):
            return self.getToken(LatexParser.HEADER2, 0)

        def text(self):
            return self.getTypedRuleContext(LatexParser.TextContext,0)


        def COMMAND_CLOSE(self):
            return self.getToken(LatexParser.COMMAND_CLOSE, 0)

        def getRuleIndex(self):
            return LatexParser.RULE_header2

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHeader2" ):
                listener.enterHeader2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHeader2" ):
                listener.exitHeader2(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHeader2" ):
                return visitor.visitHeader2(self)
            else:
                return visitor.visitChildren(self)




    def header2(self):

        localctx = LatexParser.Header2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_header2)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(LatexParser.HEADER2)
            self.state = 105
            self.text()
            self.state = 106
            self.match(LatexParser.COMMAND_CLOSE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Header3Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def HEADER3(self):
            return self.getToken(LatexParser.HEADER3, 0)

        def text(self):
            return self.getTypedRuleContext(LatexParser.TextContext,0)


        def COMMAND_CLOSE(self):
            return self.getToken(LatexParser.COMMAND_CLOSE, 0)

        def getRuleIndex(self):
            return LatexParser.RULE_header3

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHeader3" ):
                listener.enterHeader3(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHeader3" ):
                listener.exitHeader3(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHeader3" ):
                return visitor.visitHeader3(self)
            else:
                return visitor.visitChildren(self)




    def header3(self):

        localctx = LatexParser.Header3Context(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_header3)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(LatexParser.HEADER3)
            self.state = 109
            self.text()
            self.state = 110
            self.match(LatexParser.COMMAND_CLOSE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Numbered_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENUM_START(self):
            return self.getToken(LatexParser.ENUM_START, 0)

        def ENUM_END(self):
            return self.getToken(LatexParser.ENUM_END, 0)

        def text(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatexParser.TextContext)
            else:
                return self.getTypedRuleContext(LatexParser.TextContext,i)


        def item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatexParser.ItemContext)
            else:
                return self.getTypedRuleContext(LatexParser.ItemContext,i)


        def getRuleIndex(self):
            return LatexParser.RULE_numbered_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumbered_list" ):
                listener.enterNumbered_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumbered_list" ):
                listener.exitNumbered_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumbered_list" ):
                return visitor.visitNumbered_list(self)
            else:
                return visitor.visitChildren(self)




    def numbered_list(self):

        localctx = LatexParser.Numbered_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_numbered_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(LatexParser.ENUM_START)
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LatexParser.TEXT) | (1 << LatexParser.LINE_END) | (1 << LatexParser.WHITESPACE))) != 0):
                self.state = 113
                self.text()
                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 120 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 119
                self.item()
                self.state = 122 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==LatexParser.ITEM):
                    break

            self.state = 124
            self.match(LatexParser.ENUM_END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ItemizeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LIST_START(self):
            return self.getToken(LatexParser.LIST_START, 0)

        def LIST_END(self):
            return self.getToken(LatexParser.LIST_END, 0)

        def text(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatexParser.TextContext)
            else:
                return self.getTypedRuleContext(LatexParser.TextContext,i)


        def item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatexParser.ItemContext)
            else:
                return self.getTypedRuleContext(LatexParser.ItemContext,i)


        def getRuleIndex(self):
            return LatexParser.RULE_itemize

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterItemize" ):
                listener.enterItemize(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitItemize" ):
                listener.exitItemize(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitItemize" ):
                return visitor.visitItemize(self)
            else:
                return visitor.visitChildren(self)




    def itemize(self):

        localctx = LatexParser.ItemizeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_itemize)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(LatexParser.LIST_START)
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LatexParser.TEXT) | (1 << LatexParser.LINE_END) | (1 << LatexParser.WHITESPACE))) != 0):
                self.state = 127
                self.text()
                self.state = 132
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 134 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 133
                self.item()
                self.state = 136 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==LatexParser.ITEM):
                    break

            self.state = 138
            self.match(LatexParser.LIST_END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ITEM(self):
            return self.getToken(LatexParser.ITEM, 0)

        def elementContent(self):
            return self.getTypedRuleContext(LatexParser.ElementContentContext,0)


        def getRuleIndex(self):
            return LatexParser.RULE_item

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterItem" ):
                listener.enterItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitItem" ):
                listener.exitItem(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitItem" ):
                return visitor.visitItem(self)
            else:
                return visitor.visitChildren(self)




    def item(self):

        localctx = LatexParser.ItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_item)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(LatexParser.ITEM)
            self.state = 141
            self.elementContent()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CodeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CODE_START(self):
            return self.getToken(LatexParser.CODE_START, 0)

        def text(self):
            return self.getTypedRuleContext(LatexParser.TextContext,0)


        def CODE_END(self):
            return self.getToken(LatexParser.CODE_END, 0)

        def getRuleIndex(self):
            return LatexParser.RULE_code

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCode" ):
                listener.enterCode(self)
